REPO-426 | Schedule reports update

--- a/app/views/queue.html
+++ b/app/views/queue.html
@@ -8,8 +8,8 @@
          <th>Report</th>
          <th>Status</th>
          <th>ID</th>
-         <th>Created</th>
-         <th>Created By</th>
+         <th>Requested On</th>
+         <th>Requested By</th>
          <th>Runtime</th>
          <th>Report Size</th>
          <th>Actions</th>
