--- a/app/views/scheduled-reports.html
+++ b/app/views/scheduled-reports.html
@@ -24,7 +24,7 @@
              {{scheduledReport.template.description}} <br></br>
              {{scheduledReport.recurrencePattern}} every {{scheduledReport.dayOfWeek}} {{scheduledReport.daysOfWeek}} {{scheduledReport.dayOfMonth=='-1'?'Last Day':scheduledReport.dayOfMonth}} 
              at {{scheduledReport.recurrenceTime.substring(0, 5);}} on TimeZone[{{scheduledReport.timeZone}}] 
-             from {{scheduledReport.recurrenceStartDate | date :  "dd.MM.y"}} to {{scheduledReport.recurrenceEndDate | date :  "dd.MM.y"}}
+             from {{scheduledReport.recurrenceStartDate | date :  "dd.MM.y"}} to {{scheduledReport.recurrenceEndDate | date :  "dd.MM.y"}} and Scheduled By {{ scheduledReport.scheduledByPerson.userName }}
            </div>
         </div>
               
