TSVPORTAL-11626 - Fixed sorting

--- a/app/views/reconciliation-discrepancy-detail.html
+++ b/app/views/reconciliation-discrepancy-detail.html
@@ -504,10 +504,10 @@
                     <span class="fa fa-sort active text-muted-light" ng-show="getArrowType('inboundOffloadCount', true) === 'none'"></span>
                     Inbounded<br/>or Offload Count
                   </th>
-                  <th ng-click="updateOrderBy('ePOSSales', true)">
-                    <span class="fa fa-sort-asc active" ng-show="getArrowType('ePOSSales', true) === 'ascending'"></span>
-                    <span class="fa fa-sort-desc active" ng-show="getArrowType('ePOSSales', true) === 'descending'"></span>
-                    <span class="fa fa-sort active text-muted-light" ng-show="getArrowType('ePOSSales', true) === 'none'"></span>
+                  <th ng-click="updateOrderBy('eposQuantity', true)">
+                    <span class="fa fa-sort-asc active" ng-show="getArrowType('eposQuantity', true) === 'ascending'"></span>
+                    <span class="fa fa-sort-desc active" ng-show="getArrowType('eposQuantity', true) === 'descending'"></span>
+                    <span class="fa fa-sort active text-muted-light" ng-show="getArrowType('eposQuantity', true) === 'none'"></span>
                     ePOS Sales
                   </th>
                   <th ng-click="updateOrderBy('varianceQuantity', true)">
