TSVPORTAL-11764 - Remove unecessary functions

--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -416,7 +416,7 @@
                      ng-change="stationListChanged($index)">
             <ui-select-match placeholder="Select Departure Station">{{ $select.selected.code }}</ui-select-match>
             <ui-select-choices repeat="companyStation in selectOptions.companyStationGlobals | filter: $select.search"
-                               ui-disable-choice="disabledDepartureStationsV2(companyStation, inclusionFilterData)">
+                               ui-disable-choice="disabledDepartureStations(companyStation, inclusionFilterData)">
               {{ companyStation.code }} - {{ companyStation.name }}
             </ui-select-choices>
           </ui-select>
@@ -429,7 +429,7 @@
                      ng-change="stationListChanged($index)">
             <ui-select-match placeholder="Select Arrival Station">{{ $select.selected.code }}</ui-select-match>
             <ui-select-choices repeat="companyStation in selectOptions.companyStationGlobals | filter: $select.search"
-                               ui-disable-choice="disabledArrivalStationsV2(companyStation, inclusionFilterData)">
+                               ui-disable-choice="disabledArrivalStations(companyStation, inclusionFilterData)">
               {{ companyStation.code }} - {{ companyStation.name }}
             </ui-select-choices>
           </ui-select>
