--- a/app/views/promotion-category.html
+++ b/app/views/promotion-category.html
@@ -125,6 +125,22 @@
               <div ng-bind-html="masterItem.itemName | highlight: $select.search"></div>
             </ui-select-choices>
           </ui-select>
+
+          <div class="input-group">
+            <input type="text"
+                   class="form-control"
+                   placeholder="Lookup an Item"
+                   name="menuItem-{{$index}}"
+                   ng-model="item.selectedItem.itemName"/>
+            <div class="input-group-btn">
+              <button type="button"
+                      class="btn btn-default"
+                      ng-click="showMasterItemsModal(item)">
+                <i class="fa fa-info-circle"></i>
+              </button>
+            </div>
+          </div> {{item}}
+
           <div ng-if="item.isExpired && isCopy" style="color:red">This item expired!</div>
         </td>
         <td>
@@ -137,4 +153,53 @@
 
   </form>
 </div>
+
+<div class="modal" id="master-items" data-keyboard="false">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="row">
+          <div class="col-xs-8">
+            <h4 class="modal-title">Lookup Valid Items</h4>
+          </div>
+          <div class="col-xs-4 text-right">
+            <button class="btn btn-default btn-cancel" data-dismiss="modal">Close</button>
+            <button class="btn btn-success" ng-click="populateAllSelectedItems()">Select Items</button>
+          </div>
+        </div>
+      </div>
+      <div class="modal-body">
+        <div class="table-responsive">
+          <div class="input-group">
+            <input ng-model="masterItemsListFilterText" type="text" class="form-control" id="filter-item-details"
+                   placeholder="Filter Items List"/>
+            <div class="input-group-btn">
+              <button type="button"
+                      class="btn btn-default"
+                      ng-click="filterMasterItemsList()">
+                <i class="fa fa-filter"></i> Filter
+              </button>
+            </div>
+          </div>
+
+          <table class="table table-bordered table-condensed">
+            <tr>
+              <th>Item Name</th>
+              <th>Item Code</th>
+              <th style="text-align:center;"><input class="btn btn-default" type="checkbox" value="1" ng-model="allCheckboxesSelected" ng-click="toggleAllCheckboxes()"></th>
+            </tr>
+            <tr ng-repeat="masterItem in modalMasterItemList | filter: {itemName: masterItemsListSearch} | orderBy:'itemName'">
+              <td>{{ masterItem.itemName }}</td>
+              <td>{{ masterItem.itemCode }}</td>
+              <td style="text-align:center;">
+                <input class="btn btn-default" ng-click="toggleSelectAll()" type="checkbox" ng-model="masterItem.isItemSelected"/>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <dynamic-left-nav title="Promotion Management"></dynamic-left-nav>
