--- a/app/views/packingplan-list.html
+++ b/app/views/packingplan-list.html
@@ -4,7 +4,7 @@
     	<h2 class="view-name">{{ viewName }}</h2>
     </div>
     <div class="col-xs-6 text-right">
-       <a href="#/packingplan-create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Packing Plan</span></a>
+       <a href="#/packingplan/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Packing Plan</span></a>
        <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
                aria-expanded="false"
                aria-controls="search-collapse" id="filterPriceUpdaterListId">
